<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Widget.Material3.CardView.Filled"
    android:layout_width="304dp"
    android:layout_height="361dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    app:cardCornerRadius="24dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/course_image_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@null"
            android:foreground="@drawable/gradient_bottom_fade"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.chip.Chip
            android:id="@+id/tag_chip"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:enabled="false"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:text="@string/free_e_book"
            android:textColor="@android:color/white"
            android:textSize="10sp"
            android:textStyle="bold"
            app:chipBackgroundColor="@color/color_FCCC75"
            app:chipCornerRadius="20dp"
            app:chipEndPadding="12dp"
            app:chipMinTouchTargetSize="0dp"
            app:chipStartPadding="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:textEndPadding="0dp"
            app:textStartPadding="0dp"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/title_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="4dp"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/time_text_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/stopwatch_image_view"
            android:layout_width="16dp"
            android:layout_height="0dp"
            android:contentDescription="@null"
            android:src="@drawable/ic_stopwatch"
            app:layout_constraintBottom_toBottomOf="@+id/time_text_view"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toStartOf="@+id/title_text_view"
            app:layout_constraintTop_toTopOf="@+id/time_text_view" />

        <TextView
            android:id="@+id/time_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="16dp"
            android:textColor="@color/color_8C8C8C"
            android:textSize="10sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/chip_group"
            app:layout_constraintStart_toEndOf="@+id/stopwatch_image_view"
            tools:ignore="SmallSp" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="4dp"
            app:chipSpacingHorizontal="12dp"
            app:layout_constraintBottom_toTopOf="@+id/person_name_text_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.chip.Chip
                android:id="@+id/first_tag"
                style="@style/CourseTagChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                app:chipBackgroundColor="@color/color_4DC9D1" />

            <com.google.android.material.chip.Chip
                android:id="@+id/second_tag"
                style="@style/CourseTagChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                app:chipBackgroundColor="@color/color_0082CD" />

            <com.google.android.material.chip.Chip
                android:id="@+id/third_tag"
                style="@style/CourseTagChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                app:chipBackgroundColor="@color/color_8D5EF2" />
        </com.google.android.material.chip.ChipGroup>

        <ImageView
            android:id="@+id/course_avatar_image_view"
            android:layout_width="40dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:contentDescription="@null"
            app:layout_constraintBottom_toBottomOf="@+id/person_role_text_view"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/person_name_text_view" />

        <TextView
            android:id="@+id/person_name_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/laurel_seilha"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/person_role_text_view"
            app:layout_constraintStart_toEndOf="@+id/course_avatar_image_view" />

        <TextView
            android:id="@+id/person_role_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/product_designer"
            android:textColor="@color/color_9D9FA0"
            android:textSize="10sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/person_name_text_view"
            tools:ignore="SmallSp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>